# bsuccinct-rs

./: .gitignore  README.md
coding_benchmark/: Cargo.toml
coding_benchmark/src/: main.rs  minimum_redundancy.rs
minimum_redundancy/: Cargo.toml
minimum_redundancy/src/: decoder.rs  iterators.rs  lib.rs
rubbish/: Cargo.toml
rubbish/src/: main.rs
